--- a/css/style.css
+++ b/css/style.css
@@ -120,6 +120,56 @@ width:280px;
 font-size:18px;
 padding:12px 0;
 }
+
+
+/* qr code generator ------------- */
+.option-btn{
+
+    cursor:pointer;
+}
+
+.option-btn.active{
+    background:#7c5cff;
+}
+
+.cardcustom .btn-purple{
+    background:#7c5cff;
+    
+}
+
+.cardcustom .btn-purple:hover{
+    background:#6847ff;
+}
+
+
+
+
+
+.qr-box{
+    background:white;
+    min-height:235px;
+    border-radius:15px;
+    padding:2px;
+    display: flex;
+    align-items: center;      /* Vertical */
+    justify-content: center;  /* Horizontal */
+    overflow: hidden;
+    text-align: center;
+}
+
+.hidden{
+    display:none;
+}
+
+.cardcustom{
+   
+    border-radius:15px;
+    border: 1px solid black;
+    color: black;
+    background: rgba(255,255,255,0.9);
+    backdrop-filter: blur(5px);
+}
+
 @keyframes spin{
 100%{transform:rotate(360deg);}
 }
